--- a/playbook.yml
+++ b/playbook.yml
@@ -4,6 +4,7 @@
   become: yes
   roles:
     - role: role_vmrun
+      vmrun_path: "/Applications/VMware Fusion.app/Contents/Public/vmrun"
       vmrun_state: start # [ start | stop | reset | suspend | pause | unpause ]
       vmx_directory: "/Users/jacliu/Virtual Machines.localized/"
       vmx_file_list: 
