--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   gather_facts: no
-  become: yes
+  become: no
   roles:
     - role: role_vmrun
       vmrun_path: "/Applications/VMware Fusion.app/Contents/Public/vmrun"
