--- a/role_vmrun/tasks/main.yml
+++ b/role_vmrun/tasks/main.yml
@@ -3,11 +3,11 @@
 - block:
     - name: "({{ ROLE_ID }} - 000.01) To execute vmrun command"
       shell: >
-          cd "{{ vmrun_path }}" && ./vmrun -T {{ vmrun_type }} {{ vmrun_state }} "{{ item.0 }}" "{{ item.1 }}" {{ vmrun_start_parameter }} {{ vmrun_stop_parameter }} {{ vmrun_clone_parameter }}
+          cd "{{ vmrun_path }}" && ./vmrun -T {{ vmrun_type }} {{ vmrun_state }} "{{ item }}" {{ vmrun_start_parameter }} {{ vmrun_stop_parameter }} {{ vmrun_clone_parameter }}
       args:
           executable: /bin/bash
-      loop: "{{ vmx_file_list | zip(clone_dst_list) | list }}"
-  when: vmx_file_list != "all"
+      loop: "{{ vmx_start_list }}{{ vmx_stop_list }}{{ vmx_clone_list }}"
+  when: vmx_stop_list != "all"
 
 - block:
     - name: "({{ ROLE_ID }} - 000.02) To get vmrun list"
@@ -23,4 +23,4 @@
       args:
           executable: /bin/bash
       loop: "{{ listIsAll.stdout_lines }}"
-  when: vmx_file_list == "all"
+  when: vmx_stop_list == "all"
