--- a/role_vmrun/vars/main.yml
+++ b/role_vmrun/vars/main.yml
@@ -21,5 +21,9 @@ vmrun_type: fusion
 # ----------------------------------------------------------------
 
 vmrun_state: start # [ start | stop | reset | suspend | pause | unpause ]
-vmx_file_list: []
-vmrun_parameter: ""
+vmx_start_list: []
+vmx_stop_list: []
+vmx_clone_list: []
+vmrun_start_parameter: ""
+vmrun_stop_parameter: ""
+vmrun_clone_parameter: ""
