--- a/role_vmrun/tasks/main.yml
+++ b/role_vmrun/tasks/main.yml
@@ -6,8 +6,8 @@
           cd "{{ vmrun_path }}" && ./vmrun -T {{ vmrun_type }} {{ vmrun_state }} "{{ item }}" {{ vmrun_start_parameter }} {{ vmrun_stop_parameter }} {{ vmrun_clone_parameter }}
       args:
           executable: /bin/bash
-      loop: "{{ vmx_start_list + vmx_stop_list + vmx_clone_list }}"
-  when: vmx_stop_list | length > 0 and vmx_stop_list[0] != "all"
+      loop: "{{ vmx_start_list | list + vmx_stop_list | list + vmx_clone_list | list }}"
+  when: vmx_stop_list != "all"
 
 - name: stop all VMs
   block:
@@ -24,4 +24,4 @@
       args:
           executable: /bin/bash
       loop: "{{ listIsAll.stdout_lines }}"
-  when: vmx_stop_list | length > 0 and vmx_stop_list[0] == "all"
+  when: vmx_stop_list == "all"
