--- a/role_vmrun/tasks/main.yml
+++ b/role_vmrun/tasks/main.yml
@@ -3,7 +3,7 @@
 - block:
     - name: "({{ ROLE_ID }} - 000.01) To execute vmrun command"
       shell: >
-          cd "{{ vmrun_path }}" && ./vmrun -T {{ vmrun_type }} {{ vmrun_state }} "{{ item }}" {{ vmrun_start_parameter }} {{ vmrun_stop_parameter }} {{ vmrun_clone_parameter }}
+          cd "{{ vmrun_path }}" && ./vmrun -T {{ vmrun_type }} {{ vmrun_state }} {{ item }} {{ vmrun_start_parameter }} {{ vmrun_stop_parameter }} {{ vmrun_clone_parameter }}
       args:
           executable: /bin/bash
       loop: "{{ vmx_start_list | list + vmx_stop_list | list + vmx_clone_list | list }}"
